// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SvgIcon Snapshots renders SvgIcon with class 1`] = `
<svg
  className="svg medium filled test"
  height="1em"
  viewBox="0 0 24 24"
  width="1em"
>
  <path
    d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"
  />
</svg>
`;

exports[`SvgIcon Snapshots renders SvgIcon with default options 1`] = `
<svg
  className="svg medium filled"
  height="1em"
  viewBox="0 0 24 24"
  width="1em"
>
  <path
    d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"
  />
</svg>
`;
